# realtime-mvp-de

./: .gitignore  Dockerfile.dashboard  Dockerfile.flink  Dockerfile.producer  FLINK_SETUP.md  MVP_STATUS.md  README.md  checkout.md  docker-compose.yml  pyproject.toml  start_mvp.sh  submit_flink_job.py  test_setup.py
src/realtime_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/realtime_mvp/dashboard/: app.py
src/realtime_mvp/flink/: flink_job.py
src/realtime_mvp/producer/: producer.py
