[project]
name = "realtime-mvp"
version = "0.1.0"
description = "Real-time log analytics MVP with Kafka, Flink, and Streamlit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kafka-python",
    "pandas>=2.0.0",
    "faker",
    "numpy>=1.24.0",
    "apache-flink>=2.1.0",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
